[package]
name = "sourcemap"
version = "4.1.0"
authors = ["Sentry <hello@sentry.io>"]
keywords = ["javascript", "sourcemap", "sourcemaps"]
description = "Basic sourcemap handling for Rust"
homepage = "https://github.com/getsentry/rust-sourcemap"
documentation = "http://getsentry.github.io/rust-sourcemap/"
license = "BSD-3-Clause"
readme = "README.md"
edition = "2018"
autoexamples = true

include = [
    "/src/**/*.rs",
    "/examples/*.rs",
    "/*.toml",
    "/LICENSE",
    "/README.md",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
url = "1.7.2"
serde = { version = "1.0.88", features = ["derive"] }
serde_json = "1.0.38"
base64 = "0.10.1"
regex = "1.1.0"
lazy_static = "1.2.0"
if_chain = "0.1.3"
scroll = { version = "0.9.2", features = ["derive"], optional = true }

[build-dependencies]
rustc_version = "0.2.3"

[features]
ram_bundle = ["scroll"]

[[example]]
name = "split_ram_bundle"
required-features = ["ram_bundle"]
