[package]
name = "sourcemap"
version = "5.0.0"
authors = ["Sentry <hello@sentry.io>"]
keywords = ["javascript", "sourcemap", "sourcemaps"]
description = "Basic sourcemap handling for Rust"
homepage = "https://github.com/getsentry/rust-sourcemap"
documentation = "http://getsentry.github.io/rust-sourcemap/"
license = "BSD-3-Clause"
readme = "README.md"
edition = "2018"
autoexamples = true

include = [
    "/src/**/*.rs",
    "/examples/*.rs",
    "/*.toml",
    "/LICENSE",
    "/README.md",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
url = "2.1.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
base64 = "0.11.0"
regex = "1.3.4"
lazy_static = "1.4.0"
if_chain = "1.0.0"
scroll = { version = "0.10.1", features = ["derive"], optional = true }

[build-dependencies]
rustc_version = "0.2.3"

[features]
ram_bundle = ["scroll"]

[[example]]
name = "split_ram_bundle"
required-features = ["ram_bundle"]
